--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ SMTP_PORT=587
 SMTP_USER=
 SMTP_PASSWORD=
 
+# ── CORS (optional) ──
+# Comma-separated list of allowed origins. Leave empty to allow all.
+ALLOWED_ORIGINS=
+
 # ── Notification channels (optional, can also be configured via UI) ──
 SLACK_WEBHOOK_URL=
 NTFY_URL=
