--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
       - ./migrations:/app/migrations
       - /mnt/backup:/mnt/backup
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ssh-keys:/app/.ssh:ro
+      - /root/.ssh:/root/.ssh:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       db:
         condition: service_healthy
@@ -75,7 +77,9 @@ services:
       - ./api:/app/api
       - /mnt/backup:/mnt/backup
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ssh-keys:/app/.ssh:ro
+      - /root/.ssh:/root/.ssh:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       db:
         condition: service_healthy
@@ -106,7 +110,6 @@ services:
 volumes:
   pgdata:
   redisdata:
-  ssh-keys:
 
 networks:
   vaultmaster:
