Complete i18n (SV/EN), SSH key GUI, sudo support, Coming Soon tab
i18n — FULL coverage (400+ translation keys):
- Every single page now uses useT() for all user-visible text
- Login, Setup, Dashboard, Servers, Jobs, Runs, Artifacts, Storage,
  Notifications, Audit, Users, Settings, Topbar, Sidebar — all translated
- Swedish (default) and English with language switcher in Topbar
- No hardcoded English strings remain in any page

SSH — non-root user support:
- Server form defaults to empty ssh_user (placeholder guides user)
- Added 'Use sudo' toggle in server form (default: on)
- SSH client prepends 'sudo -n' to commands when use_sudo is set
  and the user is not root
- Updated tooltip to recommend regular user with sudo privileges
  instead of root

SSH key management GUI (Settings → SSH Keys tab):
- Lists all available SSH keys with public key display
- Copy public key to clipboard with one click
- Generate new ed25519 keypair from the GUI
- Instructions to add public key to target server's authorized_keys
- Backend: GET /servers/ssh-keys, POST /servers/ssh-keys/generate
- Fixed route ordering: static routes before {server_id} param routes
- Changed Docker SSH mount from :ro to read-write for key generation
- Default ssh_key_path now points to /root/.ssh/vaultmaster_ed25519

Settings — Coming Soon tab:
- 8 planned features with icons, titles, descriptions (SV + EN)
- WordPress Management, Plugin Marketplace, Advanced Analytics,
  Security Scanning, Incremental Backups, Disaster Recovery,
  Multi-site Dashboard, AI Anomaly Detection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ./migrations:/app/migrations
       - /mnt/backup:/mnt/backup
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /root/.ssh:/root/.ssh:ro
+      - /root/.ssh:/root/.ssh
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
