feat: OAuth storage flow, rclone inline backends, secret preservation
Storage backends:
- Rewrote rclone_client.py to use inline backend flags (no rclone.conf needed)
- Fixed GDrive: folder_id as --drive-root-folder-id, not remote path
- Fixed SFTP: passwords obscured via 'rclone obscure' before passing
- Fixed B2: support both 'app_key' and 'application_key' config keys
- Added _obscure_password helper for SFTP backend

OAuth flow (GDrive/OneDrive):
- New oauth_storage.py service with Redis-backed state (multi-worker safe)
- POST /storage/oauth/start — generates auth URL
- GET /storage/oauth/callback — exchanges code for rclone-compatible token
- GET /storage/oauth/token/{state} — frontend polls for completed token
- GET /storage/oauth/redirect-uri — returns callback URI for provider config
- Token expiry correctly formatted as ISO 8601 timestamp

Storage API:
- Secret preservation on update: empty secret fields no longer overwrite
  stored values (client_secret, password, token, app_key etc.)
- Auth moved from router-level to per-endpoint (callback must be public)

Docker:
- Mounted /srv/archive and /root/.config/rclone in api + worker containers

UI:
- Redirect URI display with copy button for GDrive/OneDrive
- Authorize button with popup + polling (2s interval, 5min timeout)
- Token textarea (auto-filled after OAuth, or manual paste)
- Secret inputs show 'kept if empty' placeholder when editing
- i18n keys for all OAuth UI elements (sv/en)

Config:
- Added base_url setting for OAuth redirect URI generation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,10 @@ services:
       - ./api:/app/api
       - ./migrations:/app/migrations
       - /mnt/backup:/mnt/backup
+      - /srv/archive:/srv/archive
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /root/.ssh:/root/.ssh
+      - /root/.config/rclone:/root/.config/rclone
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
@@ -76,8 +78,10 @@ services:
     volumes:
       - ./api:/app/api
       - /mnt/backup:/mnt/backup
+      - /srv/archive:/srv/archive
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /root/.ssh:/root/.ssh:ro
+      - /root/.config/rclone:/root/.config/rclone:ro
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
